fix read resource